fix: icon alignment menu module (#658)

--- a/source/php/Module/Menu/assets/menu.scss
+++ b/source/php/Module/Menu/assets/menu.scss
@@ -4,7 +4,6 @@ $color-black: var(--color-black, #000000) !default;
 .mod-menu.mod-menu--listing {
     .mod-menu__heading {
         display: flex;
-        align-items: center;
         text-decoration: none;
     }
 
